[project]
name = "prx-practical-lab"
version = "2025.0.1"
authors = [
  {name = "Paul Thevenon", email = "thevenon@recherche.enac.fr"},
]
requires-python = ">= 3.12"
dependencies = [
  "netcdf4",
  "pip",
  "jupyter",
  "xarray",
  "ipykernel",
  "scipy",
  "matplotlib",
  "dask",
  "numpy",
  "pandas",
  "cartopy",
  "ipympl",
  "nbstripout",
  "ruff",
  "pytest",
  "tqdm",
  "pyarrow",
  "plotly",
  "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
extend-exclude = ["notebooks_old", "*.ipynb"]
